[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/Ships.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PlayerLaserGun.gd" type="Script" id=3]
[ext_resource path="res://Sprites/FX.png" type="Texture" id=4]
[ext_resource path="res://Scripts/EnemyBoundary.gd" type="Script" id=5]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=6]
[ext_resource path="res://Other/m3x6.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/LevelManager.gd" type="Script" id=8]
[ext_resource path="res://Scripts/EnemySpawner.gd" type="Script" id=9]
[ext_resource path="res://Sounds/intro_battle.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 7 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0111732, 0.547486, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 5 )

[sub_resource type="Animation" id=7]
resource_name = "Burn"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fly"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fly_Down"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fly_Up"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 160, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5, 90 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 90 )

[node name="World" type="Node2D"]

[node name="HUD" type="CanvasLayer" parent="." groups=["HUD"]]
script = ExtResource( 6 )

[node name="ScoreLabel" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "SCORE"

[node name="GameOverLabel" type="Label" parent="HUD"]
margin_left = 141.0
margin_top = 82.0
margin_right = 181.0
margin_bottom = 96.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "GAME OVER"

[node name="ReadyLabel" type="Label" parent="HUD"]
margin_left = 141.0
margin_top = 82.0
margin_right = 181.0
margin_bottom = 96.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "GET READY!"

[node name="RetryLabel" type="Label" parent="HUD"]
margin_left = 141.0
margin_top = 105.0
margin_right = 181.0
margin_bottom = 119.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "RETRY?"

[node name="WaveLabel" type="Label" parent="HUD"]
margin_left = 280.0
margin_top = 2.0
margin_right = 320.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "WAVE:"

[node name="MovingStarParticles" type="CPUParticles2D" parent="."]
position = Vector2( 332, 86 )
rotation = 3.14159
amount = 50
lifetime = 8.0
preprocess = 8.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 90 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0

[node name="StationaryStars" type="CPUParticles2D" parent="."]
position = Vector2( 160, 90 )
rotation = 3.14159
amount = 50
lifetime = 10.0
preprocess = 8.0
emission_shape = 2
emission_rect_extents = Vector2( 180, 90 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 1 )

[node name="Player" type="KinematicBody2D" parent="." groups=["Player"]]
position = Vector2( 26, 94 )
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Propulsion" type="Node2D" parent="Player"]
position = Vector2( -12, 0 )

[node name="Sprite" type="Sprite" parent="Player/Propulsion"]
position = Vector2( -2, -1 )
rotation = 1.5708
texture = ExtResource( 4 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Propulsion"]
autoplay = "Burn"
anims/Burn = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
hframes = 3
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../..")
autoplay = "Fly"
anims/Fly = SubResource( 3 )
anims/Fly_Down = SubResource( 5 )
anims/Fly_Up = SubResource( 6 )
anims/RESET = SubResource( 4 )

[node name="PlayerLaserGun" type="Node2D" parent="Player"]
position = Vector2( 13, 0 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Player/PlayerLaserGun"]
wait_time = 0.3

[node name="LevelManager" type="Node2D" parent="." groups=["LevelManager"]]
script = ExtResource( 8 )

[node name="LevelTimer" type="Timer" parent="LevelManager"]

[node name="EnemySpawner" type="Node2D" parent="." groups=["EnemySpawner"]]
position = Vector2( 341, 91 )
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="EnemySpawner"]

[node name="PlayerBoundaries" type="Node2D" parent="."]
position = Vector2( -28, 91 )

[node name="TopWall" type="StaticBody2D" parent="PlayerBoundaries"]
position = Vector2( 190, -100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundaries/TopWall"]
shape = SubResource( 12 )

[node name="BottomWall" type="StaticBody2D" parent="PlayerBoundaries"]
position = Vector2( 190, 98 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundaries/BottomWall"]
shape = SubResource( 12 )

[node name="LeftWall" type="StaticBody2D" parent="PlayerBoundaries"]
position = Vector2( 28, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundaries/LeftWall"]
shape = SubResource( 11 )

[node name="RightWall" type="StaticBody2D" parent="PlayerBoundaries"]
position = Vector2( 350, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundaries/RightWall"]
shape = SubResource( 11 )

[node name="EnemyBoundary" type="Area2D" parent="."]
position = Vector2( -28, 91 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBoundary"]
shape = SubResource( 10 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
